; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/xps/extr_xps-path.c_xps_parse_point.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/xps/extr_xps-path.c_xps_parse_point.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @xps_parse_point(i32* %0, i32* %1, i8* %2, float* %3, float* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca float*, align 8
  %10 = alloca float*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca [2 x float], align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i8* %2, i8** %8, align 8
  store float* %3, float** %9, align 8
  store float* %4, float** %10, align 8
  %13 = load i8*, i8** %8, align 8
  store i8* %13, i8** %11, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = load i8*, i8** %11, align 8
  %17 = getelementptr inbounds [2 x float], [2 x float]* %12, i64 0, i64 0
  %18 = call i8* @xps_parse_float_array(i32* %14, i32* %15, i8* %16, i32 2, float* %17)
  store i8* %18, i8** %11, align 8
  %19 = getelementptr inbounds [2 x float], [2 x float]* %12, i64 0, i64 0
  %20 = load float, float* %19, align 4
  %21 = load float*, float** %9, align 8
  store float %20, float* %21, align 4
  %22 = getelementptr inbounds [2 x float], [2 x float]* %12, i64 0, i64 1
  %23 = load float, float* %22, align 4
  %24 = load float*, float** %10, align 8
  store float %23, float* %24, align 4
  %25 = load i8*, i8** %11, align 8
  ret i8* %25
}

declare dso_local i8* @xps_parse_float_array(i32*, i32*, i8*, i32, float*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
